--- a/src/styles/globals.scss
+++ b/src/styles/globals.scss
@@ -9,6 +9,7 @@
   margin: 0;
   padding: 0;
   box-sizing: border-box;
+  
 }
 
 $transition-time: 2.3s;
@@ -17,7 +18,6 @@ body {
   font-family: 'Playpen Sans', cursive;
   font-size: 16px;
   line-height: 1.5;
-  background: url("/public/images/annie-spratt-6a3nqQ1YwBw-unsplash.jpg") no-repeat center center fixed;
   
   /* Keep the inherited background full size. */
   background-attachment: fixed; 
@@ -136,11 +136,9 @@ hr {
 .hero-container {
   height: 65vh;
   display: flex;
-  background-color: rgba(255, 255, 255, 0.15);  
-   justify-content: center;
+  justify-content: center;
   align-items: center;
   flex-direction: column;
- 
 }
 
 .hero-container .profile-img {
@@ -273,9 +271,9 @@ hr {
 }
 
 .projects-container h2 {
-  font-size: 2rem;
+  font-size: 1rem;
   text-align:center;
-  font-weight: 600;
+  font-weight: 400;
   margin-bottom: 1rem;
   
 }
@@ -320,8 +318,7 @@ hr {
 
       a {
         transform: translateZ(-60px) rotatey(-180deg);
-      }
-     
+      } 
     }
   }
 
@@ -377,7 +374,7 @@ hr {
       font-size: 3em;
       transform: translateZ(0px);
     }
-     p {
+  p {
         color: #ffffff;
         top: 20px;
           left: 30px;
@@ -406,13 +403,13 @@ hr {
         transform: translateZ(-1px) rotatey(-180deg);
         background: transparent;
         margin-top: 0em;
-        align-items: start;
+        align-items: center;
         justify-content: start;
         text-align: start;
         line-height: 1.4;
         border: 5px solid rgba(255, 255, 255, .5);
         font-weight: 200;
-        font-size: 1.3em;
+        font-size: 1.1em;
         color: white;
         padding: 10px 10px 10px;
         outline: none;
@@ -425,7 +422,7 @@ hr {
       transform: translateZ(-1px) rotatey(-180deg);
       background: transparent;
       border: 1px solid white;
-      margin-top: 17em;
+      margin-top: 10em;
       margin-bottom: 0em;
       align-items: center;
         justify-content: center;
